<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/azul_claro"
    tools:context=".ActivityBuscar" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/azul_claro"
        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="40dp"
	            android:layout_marginRight="210dp"
	            android:text="Buscar"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@android:color/white" />


	             />
	    </LinearLayout>
	    
    <TextView
        android:id="@+id/lblLibreria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        
        android:textSize="30dp"
        
        android:text="@string/libreria" />

    <Spinner
        android:id="@+id/spnLibreria"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
    	android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" 
        android:dropDownWidth="500dp"
        
       
        />
    
    <TextView
        android:id="@+id/lblTipoBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:textSize="30dp"
        android:text="@string/buscarPor" />
    
    <Spinner
        android:id="@+id/spnTipoBusqueda"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
    	android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <TextView
        android:id="@+id/lblBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        
        android:textSize="30dp"
        
        android:text="@string/buscar" />

    <EditText
        android:id="@+id/txtBuscar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="5dp"
        
        android:inputType="text"
        
        
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/btnBuscar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:onClick="llamar_activity_resultados"
        android:text="@string/buscar_menu"
        android:textSize="30dp" />
 
</LinearLayout>
