<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/azul_claro"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/azul_claro"
        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="40dp"
	            android:layout_marginRight="210dp"
	            android:text="Menu Principal"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="@android:color/white" />

	     <com.facebook.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_row="0"
            fb:login_text="Entra con Facebook"
            fb:logout_text="Cerrar Sesion" />

	             />
	    </LinearLayout>
	    
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bienvenido a Mob Library"
            android:textSize="45dp"
            android:layout_marginBottom="40dp"
            android:textStyle="italic"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="547dp"
        android:columnCount="1" >

        <ImageButton
            android:id="@+id/btnUbicar"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:onClick="llamar_activity_localizacion"
            android:src="@drawable/ubicar"
            android:text="@string/ubicar_menu"
            tools:ignore="InefficientWeight" />

        <ImageButton
            android:id="@+id/btnRecomendar"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:src="@drawable/recomendar"
            android:onClick="llamar_activity_recomendar"
            android:text="@string/recomendar_menu" />

        <ImageButton
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:onClick="llamar_activity_buscar"
            android:src="@drawable/buscar"
            android:text="@string/buscar_menu" />

        <ImageButton
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:src="@drawable/perfil"
            android:text="@string/editar_menu" 
            android:onClick="llamar_activity_editar"/>


    </GridLayout>

</LinearLayout>